--- a/package.json
+++ b/package.json
@@ -16,9 +16,20 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.8.1",
+    "framer-motion": "6.3.0",
     "gatsby": "^4.12.1",
+    "gatsby-image": "3.11.0",
+    "gatsby-plugin-image": "2.12.1",
+    "gatsby-plugin-react-helmet": "5.12.1",
+    "gatsby-plugin-react-svg": "3.1.0",
+    "gatsby-plugin-sharp": "4.12.1",
+    "gatsby-source-filesystem": "4.12.1",
+    "gatsby-transformer-sharp": "4.12.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "6.1.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.23",
